--- a/src/assets/scss/general.scss
+++ b/src/assets/scss/general.scss
@@ -1,4 +1,4 @@
-@import './variables';
+@import "./variables";
 
 html {
     body {
@@ -11,12 +11,14 @@ html {
     }
 }
 
-h1, h3, h4 {
+h1,
+h3,
+h4 {
     font-size: 1rem;
 }
 
 h5 {
-    font-size: .9rem;
+    font-size: 0.9rem;
 }
 
 h2 {
@@ -32,17 +34,16 @@ ul {
 }
 
 .card {
-    background: rgba(255, 255, 255, .7);
-    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
-    font-size: .8rem;
+    background: rgba(255, 255, 255, 0.8);
+    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+    font-size: 0.8rem;
 }
-
 
 .block-title {
     font-weight: bold;
     text-align: left;
     &::after {
-        content: '';
+        content: "";
         display: block;
         height: 1px;
         background-color: $bs-dark;
@@ -53,5 +54,19 @@ ul {
     .container {
         min-width: 100%;
     }
-}
 
+    @page {
+        size: A4;
+        margin: 0;
+    }
+
+    .card {
+        box-shadow: none;
+    }
+
+    .page {
+        margin-top: 10mm;
+        page-break-after: always;
+        min-height: 100%;
+    }
+}
